--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <div class="game-board">
+    <div class="game-board" ontouchstart="jump()">
         <div class="botao" onclick="window.location.reload();">Jogar novamente</div>
         <img src="./images/fango.png" class="fango">
         <img src="./images/miet.gif" class="miet">
